Minor perf fix (Findbugs):  - convert new Integer(xxx) to Integer.valueOf(xxx)  - convert new Boolean(true|false) to Boolean.valueOf(true|false)
avoids creating extra objects, thereby reducing pressure on garbage collector