@@ -212,7 +212,7 @@ public class ViewCache implements Externalizable {
             for (i = inParams.length; i < inParams.length + types.length; i++) {
                 int index = i - inParams.length;
                 if (types[index] == OracleTypes.INTEGER) {
-                    outParamList.add(new Integer(stmt.getInt(i + 1)));
+                    outParamList.add(Integer.valueOf(stmt.getInt(i + 1)));
                 }
                 else if (types[index] == OracleTypes.VARCHAR) {
                     outParamList.add(stmt.getString(i + 1));
@@ -234,7 +234,7 @@ public class ViewCache implements Externalizable {
     private Object[] toObject(int[] types) {
         Object[] obj = new Object[types.length];
         for (int i = 0; i < types.length; i++) {
-            obj[i] = new Integer(types[i]);
+            obj[i] = Integer.valueOf(types[i]);
         }
         return obj;
     }
@@ -484,24 +484,24 @@ public class ViewCache implements Externalizable {
         }
         // summary
         out.writeObject(m_user);
-        out.writeObject(new Integer(m_hits));
-        out.writeObject(new Integer(m_visits));
+        out.writeObject(Integer.valueOf(m_hits));
+        out.writeObject(Integer.valueOf(m_visits));
 
         // m_rowsCache
-        out.writeObject(new Integer(m_rowsCache.size()));
+        out.writeObject(Integer.valueOf(m_rowsCache.size()));
         for (int i = 0; i < m_rowsCache.size(); i++) {
             RowsCacheEntry rce = (RowsCacheEntry)m_rowsCache.get(i);
             out.writeObject(rce);
         }
 
         // m_rowsCacheIndex (String, ArrayList<ViewRow>)
-        out.writeObject(new Integer(m_rowsCacheIndex.size()));
+        out.writeObject(Integer.valueOf(m_rowsCacheIndex.size()));
         Iterator keys = m_rowsCacheIndex.keySet().iterator();
         Iterator values = m_rowsCacheIndex.values().iterator();
         while (keys.hasNext()) {
             out.writeObject(keys.next());
             ArrayList rows = (ArrayList)values.next();
-            out.writeObject(new Integer(rows.size()));
+            out.writeObject(Integer.valueOf(rows.size()));
             for (int i = 0; i < rows.size(); i++) {
                 out.writeObject(rows.get(i));
             }
